# epoch5-template

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrep.yml  AGENT_MONITORING.md  AUTONOMOUS_ARCHITECTURE.md  AUTONOMOUS_SYSTEM_USER_GUIDE.md  CICD_ENHANCEMENT.md  CI_CD.md  CI_CD_PROMPT.md  CONTRIBUTING.md  COVERAGE_STRATEGY.md  CUSTOMER_SUCCESS_STORIES.md  DEVELOPMENT.md  Dockerfile  ENHANCEMENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  GETTING_STARTED.md  IMPROVEMENT_PLAN.md  LICENSE.md  MONETIZATION_STRATEGY.md  Makefile  PARTNER_PROGRAM.md  PRICING_CALCULATOR_TEMPLATE.md  README.md  SALES_PRESENTATION_SCRIPT.md  SALES_TOOLS.md  SECURITY.md  SECURITY_SYSTEM.md  TEST_IMPROVEMENT_PLAN.md  UNI_BLOCK_DOCUMENTATION.md  adaptive_security.py  adaptive_security.py,cover  advanced_ledger.py  agent_cli.py  agent_cli.py,cover  agent_management.py  agent_management.py,cover  agent_monitor.py  (+80 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: automation.yml  ci-cd-pipeline.yml  ci-cd.yml  codeql-analysis.yml  performance.yml  pr-coverage-report.yml  release.yml  security-scan.yml  security.yml  test-coverage.yml  update-coverage-badge.yml
deployment/: README.md
deployment/kubernetes/: deployment.yaml  service.yaml  storage.yaml
docs/coverage_improvement_reports/: ceiling_dashboard_coverage_report.md
docs/images/: deployment-architecture.mmd  system-architecture.mmd
examples/: edgecapsule_cloud_example.json
infrastructure/terraform/: aws.tf  azure.tf
ledger/: build_log.txt  connections_20250825_050142.json  mesh_config_20250825_050142.json  mesh_summary_20250825_050142.json
ledger/agents/: node_5825e823.json  node_9e869969.json  node_c42c51db.json
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: dashboard-config.yml  epoch5-overview.json
monitoring/logstash/: logstash.conf
monitoring/prometheus/: alert_rules.yml  prometheus.yml
quotes/: Q-F0145D1D_example_corp.md
roi_analyses/: roi_analysis_example_corp_20250828.md
scripts/: deploy-blue-green.sh  deploy-canary.sh  rollback.sh  setup-env.sh
test_security/: agent_did_scroll.txt  sequence_scroll.txt  test_scroll.txt
test_security/audit/capsules/: gbtepoch_init.json
test_security/audit/ledger/: epoch_ledger.jsonl
test_security/audit/seals/: ceiling_enforcement_2025-08-28T06-24-00.838600+00-00.seal  ceiling_enforcement_2025-08-28T06-24-00.847283+00-00.seal  ceiling_enforcement_2025-08-28T06-24-22.858544+00-00.seal  ceiling_enforcement_2025-08-28T06-24-40.466461+00-00.seal  ceiling_enforcement_2025-08-28T06-24-40.477189+00-00.seal  ceiling_enforcement_2025-08-28T08-52-16.928311+00-00.seal  ceiling_enforcement_2025-08-28T08-52-16.951498+00-00.seal  ceiling_enforcement_2025-08-28T09-08-40.884131+00-00.seal  ceiling_enforcement_2025-08-28T09-08-40.905648+00-00.seal  ceiling_enforcement_2025-08-28T09-10-58.322836+00-00.seal  ceiling_enforcement_2025-08-28T09-10-58.343978+00-00.seal  ceiling_enforcement_2025-08-28T09-11-26.908728+00-00.seal  ceiling_enforcement_2025-08-28T09-11-26.931426+00-00.seal  ceiling_enforcement_2025-08-28T09-53-31.814970+00-00.seal  ceiling_enforcement_2025-08-28T09-53-31.863905+00-00.seal  ceiling_enforcement_2025-08-28T09-53-31.872288+00-00.seal  ceiling_enforcement_2025-08-28T09-55-20.888274+00-00.seal  ceiling_enforcement_2025-08-28T09-55-20.935175+00-00.seal  ceiling_enforcement_2025-08-28T09-55-20.945138+00-00.seal  ceiling_enforcement_2025-08-28T09-57-21.649758+00-00.seal  ceiling_enforcement_2025-08-28T09-57-21.667866+00-00.seal  ceiling_enforcement_2025-08-28T09-57-21.679603+00-00.seal  ceiling_enforcement_2025-08-28T09-58-37.028548+00-00.seal  ceiling_enforcement_2025-08-28T09-58-37.048196+00-00.seal  ceiling_enforcement_2025-08-28T09-58-37.056892+00-00.seal  ceiling_enforcement_2025-08-28T09-58-54.509074+00-00.seal  ceiling_enforcement_2025-08-28T09-58-54.528659+00-00.seal  ceiling_enforcement_2025-08-28T09-58-54.538203+00-00.seal  ceiling_enforcement_2025-08-28T10-01-06.626256+00-00.seal  ceiling_enforcement_2025-08-28T10-01-06.645108+00-00.seal  ceiling_enforcement_2025-08-28T10-01-06.654783+00-00.seal  ceiling_enforcement_2025-08-28T10-06-51.887355+00-00.seal  ceiling_enforcement_2025-08-28T10-06-51.910733+00-00.seal  ceiling_enforcement_2025-08-28T10-06-51.920230+00-00.seal  ceiling_enforcement_2025-08-28T10-07-06.689203+00-00.seal  ceiling_enforcement_2025-08-28T10-07-06.711629+00-00.seal  (+1 more)
test_security/cli_test/: test_scroll.txt
tests/: conftest.py  test_adaptive_security.py  test_agent_management.py  test_agent_management_updated.py  test_agent_monitor.py  test_capsule_metadata.py  test_capsule_metadata_extended.py  test_ceiling_dashboard.py  test_ceiling_manager.py  test_ceiling_security.py  test_cycle_execution.py  test_epoch_audit.py  test_integration.py  test_meta_capsule.py  test_meta_orchestrator.py  test_policy_grants.py  test_strategydeck_agent.py  test_strategydeck_agent_ceiling.py  test_uni_block_filter.py
tests/integration/: test_workflows.py
tests/performance/: test_load.py
tests/unit/: test_agent_management.py  test_dag_management.py
tools/: coverage_analyzer.py  generate_test_templates.py
(+44 files in other folders)
